--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,3 +23,17 @@ html, body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+/* Scoped Scrollbar Styles */
+.custom-scrollbar::-webkit-scrollbar {
+  width: 6px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #22c55e; 
+  border-radius: 10px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background-color: #162a1e;
+  border-radius: 10px;
+}
