--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,8 +21,23 @@ html, body {
   padding: 0;
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-open-sans), sans-serif;
 }
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: var(--font-kanit), sans-serif;
+  font-weight: 700;
+}
+
+p, span, li {
+  font-family: var(--font-roboto), sans-serif;
+}
+
+button {
+  font-family: var(--font-montserrat), sans-serif;
+  font-weight: 700;
+}
+
 /* Scoped Scrollbar Styles */
 .custom-scrollbar::-webkit-scrollbar {
   width: 6px;
