--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,3 +52,6 @@ button {
   background-color: #162a1e;
   border-radius: 10px;
 }
+.react-calendar {
+  background-color: transparent !important;
+}
